fix page not showing

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,10 +17,10 @@ a:hover {
 #landing,
 #settings,
 #gameEnded {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
 }
 
 #statsDiv {
